# SingletonPython

./: README.md  pyproject.toml
tests/: test_singleton.py  test_singleton_import.py
