[tool.poetry]
name = "singleton"
version = "0.1.0"
description = ""
authors = ["Stephan Schmiedmayer <casinos.slogs-0o@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
